--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -1,1 +1,100 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sunrise Café</title>
+  
+  <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
+  <!-- Navigation -->
+  <header class="navbar">
+    <h1>Sunrise Café</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero" id="home">
+    <div class="hero-text">
+      <h2>Welcome to Sunrise Café</h2>
+      <p>Brewing Joy Every Morning</p>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section class="about" id="about">
+    <h2>About Us</h2>
+    <div class="about-content">
+      <img src="images/about.jpg" alt="Cafe">
+      <p>Sunrise Café is where your day begins with warmth. We serve freshly brewed coffee and baked goods or pastries, sourced from the finest ingredients. Come in and experience the cozy ambience.</p>
+    </div>
+  </section>
+
+  <!-- Menu Section -->
+  <section class="menu" id="menu">
+    <h2>Our Menu</h2>
+    <div class="menu-items">
+      <div class="item">
+        <img src="images/menu1.jpg" alt="Espresso">
+        <h3>Espresso</h3>
+        <p>Strong and aromatic</p>
+        <span>$2.50</span>
+      </div>
+      <div class="item">
+        <img src="images/menu2.jpg" alt="Latte">
+        <h3>Latte</h3>
+        <p>Creamy and smooth</p>
+        <span>$3.20</span>
+        </div>
+
+      <div class="item">
+        <img src="images/menu.jpg" alt="baked goods or pastries">
+        <h3>baked goods or pastries</h3>
+      </div>
+    
+  </section>
+
+  <!-- Gallery Section -->
+  <section class="gallery" id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-images">
+      <img src="images/gallery1.jpg" alt="Cafe Interior">
+      <img src="images/gallery2.jpg" alt="Coffee Art">
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <p>📍 123 Coffee Street, Kolhapur City</p>
+    <p>📞 (123) 456-7890</p>
+    <p>📧 hello@sunrisecafe.com</p>
+    <form id="contactForm">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Sunrise Café. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
